Add `--add-opens` in gradle plugin on JVM >=16
### What's done:
* Add logic